# HSE-2020-torrent-project

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt  README.md  Test  main.cpp
client/include/: API.h  Download.h  InfoHelper.h  Linker.h  TorrentAPI.h  View.h  client.h  info_helper.h  make_torrent.h
client/source/: API.cpp  Download.cpp  InfoHelper.cpp  Linker.cpp  TorrentAPI.cpp  View.cpp  client.cpp  info_helper.cpp  make_torrent.cpp
client/test/: test.cpp
gui/: README.md
gui/build-torrent_gui-Desktop-Debug/: Makefile  moc_mainwindow.cpp  torrent_gui  ui_mainwindow.h
gui/torrent_gui/: addtorrentwindow.cpp  addtorrentwindow.h  addtorrentwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maketorrentwindow.cpp  maketorrentwindow.h  maketorrentwindow.ui  open_torrent_window.cpp  open_torrent_window.h  open_torrent_window.ui  resource.qrc  torrent_client.cpp  torrent_client.h  torrent_gui.pro
torrent_gui/: torrent_gui.pro
tracker/: CMakeLists.txt  README.md  test1_packs.pcapng
tracker/examples and tries/bencode_trry/: CMakeLists.txt  bencode.hpp  main.cpp
tracker/examples and tries/examp_boost_asio_udp_echo/: CMakeLists.txt  server.cpp
tracker/examples and tries/socket_example_1/: CMakeLists.txt  client.c  server.c
tracker/include/: TorrentDataBase.hpp  UDP_server.hpp
tracker/server/: CMakeLists.txt  server.cpp
tracker/server/include/: TorrentDataBase.hpp  UDP_server.hpp  server.hpp
tracker/server/src/: TorrentDataBase.cpp  UDP_server.cpp  client.cpp  main.cpp  server.cpp
tracker/src/: TorrentDataBase.cpp  UDP_server.cpp  main.cpp
